Fixed image visibility

--- a/motherfucking/assets/styles/markdown.css
+++ b/motherfucking/assets/styles/markdown.css
@@ -1,5 +1,7 @@
 img {
     visibility: hidden;
+    width: 0px;
+    height: 0px;
 }
 
 * {
